# wiki-cuisines-correlation-heatmap

./: .gitignore  README.md  defs.py  main.py  pyproject.toml  utils.py  visualization.py
data/: lookup_countries_demonyms.json
data/lookup_jsons/: lookup_countries_languages.json
