[tool.poetry]
name = "wiki-cuisines-correlation-matrix"
version = "0.1.0"
description = ""
authors = ["Alberto Santagostino"]

[tool.poetry.dependencies]
python = "^3.8"
wikipedia = "^1.4.0"
beautifulsoup4 = "^4.9.1"
progressbar = "^2.5"
pandas = "^1.1.1"
seaborn = "^0.10.1"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.3"
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
