[tool.poetry]
name = "wiki-cuisines-correlation-heatmap"
version = "0.1.0"
description = ""
authors = ["Alberto Santagostino"]

[tool.poetry.dependencies]
python = "^3.8"
wikipedia = "^1.4.0"
beautifulsoup4 = "^4.9.1"
pandas = "^1.1.1"
tqdm = "^4.48.2"
numpy = "^1.19.2"
plotly = "^4.10.0"
emoji = "^0.6.0"
psutil = "^5.7.2"
kaleido = "^0.0.3"
tabulate = "^0.8.7"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.3"
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
